Fixed header and main content. Still working on feature sections and footer
Signed-off-by: Joshua Segura <60995968+SegNova@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <link href="https://fonts.googleapis.com/css?family=Damion" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600,700" rel="stylesheet">
-  <link rel="stylesheet" href="./resources/css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:ital@1&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./resources/css/style.css">
   <meta charset="UTF-8">
 </head>
 <body>
@@ -56,7 +56,7 @@
       <div class="feature">
         <div class="center">
           <div class="image-container">
-            <img src="#" />
+            <img src="./resources/images/feature-1.png" />
           </div>
           <div class="content">
             <h2>Advanced, automatic, instant</h2>
@@ -64,10 +64,10 @@
           </div>
         </div>
       </div>
-      <div class="feature-article">
+      <div class="feature">
         <div class="center">
           <div class="image-container">
-            <img src="images/feature-2.png" />
+            <img src="./resources/images/feature-2.png" />
           </div>
           <div class="content">
             <h2>Beautifully crafted inside-out</h2>
